# sandbox

./: .hgignore  .hgsub  .hgsubstate  Automaton.cpp  Automaton.h  AutomatonFactory.cpp  AutomatonFactory.h  CMakeLists.txt  InputFile.cpp  InputFile.h  InputFileFormat.cpp  InputFileFormat.h  Makefile  Point.cpp  Point.h  RedBlackNode.d  Region.cpp  Region.h  RegionFactory.cpp  RegionFactory.h  SpatialModel.cpp  SpatialModel.h  analysis.m  boost_msm.cpp  bucket_analysis.sci  bucket_sort_10M.tar.bz2  bucket_sort_10M2.tar.bz2  config.doxygen  functions.c  gen_input_data.py  jump_table.c  main.c  main.cpp  main.d  makefile  multi_threaded.m  run_bucket_tests.sh  run_mbucket_tests.sh  single_threaded_bucket.sci  switch_state.c
CMakeLatexTemplate/: CMakeLists.txt  SRD.bib  SRD.tex
D/bloom-filter/: Bloom.d
D/bloom_filter/: main.d
D/bucket-sort/: bucket_sort_test_data.py  main.d  multi_threaded.m  single_threaded.m
D/redblacktree/: RedBlackNode.d  RedBlackTree.d  main.d
Euler/: 001.c  001.hs  002.hs  003.hs  004.hs  005.hs  006.hs  007.hs  008.hs  009.hs  010.hs  011.hs  012.hs  013.hs  014.hs  015.hs  016.hs  017.hs  018.hs  019.hs  020.hs  021.hs  022.hs  023.hs  024.hs  025.hs  026.hs  027.hs  029.hs  034.hs  046.hs  EulerValues.py  Makefile  fizzbuzz.hs  process.m
Euler/Background/: FibonacciParallel.hs  Problem3.hs  Test.hs  TestDivisors.hs  mean.hs
Euler/Data/: 008.txt
Euler/Euler/: NumberTheory.hs  Prime.hs
Models/: Lemming.cpp  Lemming.h  LemmingFactory.h  Point.cpp  Region.h  SpatialModel.cpp  SpatialModel.h
Monolithic/: Makefile  analysis.m  jump_table.c  objs.cpp  run_tests.sh
RAII/: RuntimeShared.cpp  data.cpp  helloworld.cpp  make_unique.h  socketcan.hpp  timer.cpp
RenderManager/: RenderManager.cpp  RenderManager.h  main_view.cpp  main_view.h
clane/: alias.cpp  covariant.cpp
embedded_scripting/: .hgignore  CMakeLists.txt  Presentation.odp  delegate.cpp  main.cpp
embedded_scripting/RenderManager/: CMakeLists.txt  FramerateUtility.h  RenderManager.cpp  RenderManager.h  RenderUtility.h  Ship.cpp  Ship.h  TextBox.cpp  TextBox.h
embedded_scripting/ScriptEngine/: CMakeLists.txt  MoonLanguage.l  MoonLanguage.y
embedded_scripting/Tests/: Simple.cpp
embedded_scripting/imgs/: SpaceShips.xcf
file_utils/: InputFile.cpp  InputFile.h
floating-point-distribution/: float_dist.cpp  float_dist.sci  floating_exp.sci  read_files.sci
host/: gpio.c  gpio.h  host_device.mcp  host_device.mcs  host_device.mcw  main.c  uart.c
letters/: RyanDougherty.tex
models/: Lemming.h
rainbow/: main.cpp  makefile  sample3.cpp
spatial-database/: CMakeLists.txt  config.doxygen  main.cpp
spatial-database/Models/: Lemming.cpp  LemmingFactory.cpp  Point.h  Region.cpp  RegionFactory.h  SpatialModel.cpp  SpatialModel.h
spatial-database/RenderManager/: RenderManager.cpp  RenderManager.h
spatial-database/tests/: test_Lemming.cpp
tests/: test_Automaton.cpp  test_Lemming.cpp  test_Region.cpp
units/: main.cpp
vrs-ringer/Hardware/: CarrierBoard.s#1  CarrierBoard.sch
vrs-ringer/host/: gpio.c
